--- a/WordsLearning/MainWindow.xaml
+++ b/WordsLearning/MainWindow.xaml
@@ -1,12 +1,27 @@
-﻿<Window x:Class="WordsLearning.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WordsLearning"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="WordsLearning.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ViewModels="clr-namespace:WordsLearning.ViewModels"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:WordsLearning"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    
+    Width="443.201"
+    Height="431.172"
+    Closing="Window_Closing"
+    mc:Ignorable="d" Loaded="Window_Loaded">
+
+    <Window.DataContext>
+        <ViewModels:MainWindowViewModel />
+    </Window.DataContext>
+
     <Grid>
-        
+        <StackPanel>
+            <Label Content="{Binding WorldToTranslate}" />
+            <TextBox KeyUp="TextBox_KeyUp" Text="{Binding Translated}" />
+            <Label Content="{Binding ResultMessage}" />
+        </StackPanel>
     </Grid>
 </Window>
